--- a/stylesheet/_responsive.scss
+++ b/stylesheet/_responsive.scss
@@ -167,6 +167,10 @@
       }
     }
     .content-3{
+      .wrapper{
+        width: 100%;
+        height: 72%;
+      }
       img{
         display: none;
       }
@@ -187,7 +191,7 @@
           text-align: left;
         }
         .button_wrap{
-          width: 90%;
+          width: 70%;
           display: flex;
           flex-direction: row;
           .btn{
