--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -823,4 +823,11 @@ main .content-3 .wrap-works .works {
         display: flex;
         justify-content: center;
         align-items: center;
-        position: static; } }
+        position: static; }
+  footer .footer-wrap .contact_icon_imgwrap {
+    display: none !important; }
+  footer .footer-wrap .wrap-contact {
+    height: 100vh;
+    width: 100vw;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 1fr; } }
