--- a/pug/includes/_footer.pug
+++ b/pug/includes/_footer.pug
@@ -5,11 +5,17 @@
         li
           h2 SNS
         li
-          a.link_twitter(href="https://twitter.com/front_artgraph" target="_blank") Twitter
+          a.link_twitter(href="https://twitter.com/front_artgraph" target="_blank") 
+            span.link-text  Twitter
+            img.link-image(src="material/twitter.svg")
         li
-          a.link_instagram(href="https://www.instagram.com/frontartgraph" target="_blank") instagram
+          a.link_instagram(href="https://www.instagram.com/frontartgraph" target="_blank")
+            span.link-text  Instagram
+            img.link-image(src="material/instagram.svg")
         li
-          a.link_wantedly(href="https://www.wantedly.com/users/42158900" target="_blank") wantedly
+          a.link_wantedly(href="https://www.wantedly.com/users/42158900" target="_blank")
+            span.link-text  Wantedly
+            img.link-image(src="material/wantedly_mark.svg")
     .contact_icon
       ul.contact_mails
         li
