--- a/stylesheet/_responsive.scss
+++ b/stylesheet/_responsive.scss
@@ -1,181 +1,200 @@
-@media screen and (max-width:$box_all_smartphone){
-  h1{
+@media screen and (max-width:$box_all_smartphone) {
+  h1 {
     font-size: 32px;
   }
-  .circle{
+
+  .circle {
     display: none;
   }
-  header{
-    .headerwrap{
-      .flex-pos{
+
+  header {
+    .headerwrap {
+      .flex-pos {
         display: none;
       }
-      .desktop{
+
+      .desktop {
         display: none;
       }
-      .hamburger{
+
+      .hamburger {
         z-index: 30;
         padding: 10px;
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         justify-content: space-between;
         position: fixed;
-        height: 30px;width: 30px;
+        height: 30px;
+        width: 30px;
         top: 0;
         bottom: 0;
-        left: 0px;
+        left: 0;
         margin: auto;
 
-        span{
+        span {
           height: 1px;
           width: 100%;
           background: $black;
           transition: all 500ms ease 0s;
           transform-origin: left;
         }
-
       }
-      .phone{
-              transition: all 300ms ease 0s;
-              transform: translateX(-100%);
-              display: block;
-              top: 0;
-              right: 0;
-              z-index: 20;
-              background: $black;
-              opacity: 0.6;
-              ul{
-                flex-direction: column;
-                justify-content: center;
-                height: 100vh;
-                width: 100vw;
-                li{
-                  opacity: 1;
-                  a{
-                    padding: 20px;
-                    color: $white;
-                  }
-                }
-              }
+
+      .phone {
+        transition: all 300ms ease 0s;
+        transform: translateX(-100%);
+        display: block;
+        top: 0;
+        right: 0;
+        z-index: 20;
+        background: $black;
+        opacity: 0.6;
+
+        ul {
+          flex-direction: column;
+          justify-content: center;
+          height: 100vh;
+          width: 100vw;
+
+          li {
+            opacity: 1;
+
+            a {
+              padding: 20px;
+              color: $white;
             }
+          }
+        }
+      }
     }
 
-    .headerwrap{
-      .flex-pos{
+    .headerwrap {
+      .flex-pos {
         width: 10px;
       }
     }
   }
-  main{
-    .circle-responsive{
+
+  main {
+    .circle-responsive {
       z-index: -1;
       position: fixed;
-      right: 0; left: 0;
-      top: 0;bottom: 0;
+      right: 0;
+      left: 0;
+      top: 0;
+      bottom: 0;
       margin: auto;
       width: 100vw;
       height: 100vh;
-
       display: flex;
       justify-content: center;
       align-items: center;
-      span{
+
+      span {
         position: absolute;
         opacity: 0.6;
       }
-      .res-1{
+
+      .res-1 {
         height: 200px;
-        width:200px;
+        width: 200px;
         opacity: 0.3;
         border-radius: 40% 40% 50% 40%/30% 50% 50%;
         background: #ffc9e2;
         animation: rotate 8s linear 0s backwards;
-        animation-iteration-count:infinite;
+        animation-iteration-count: infinite;
       }
-      .res-2{
-        height: 160px;
-        width:160px;
-        opacity: 1;
 
+      .res-2 {
+        height: 160px;
+        width: 160px;
+        opacity: 1;
         border-radius: 80% 30% 50% 30%/50%;
         background: $white;
         animation: minus_rotate 7s linear 0s backwards;
-        animation-iteration-count:infinite;
+        animation-iteration-count: infinite;
       }
     }
-    .bg{
+
+    .bg {
       display: none;
     }
-    .wrapper{
+
+    .wrapper {
       width: 72%;
       height: 64%;
     }
-    .btn{
+
+    .btn {
       display: flex;
       justify-content: center;
       align-items: center;
       position: static;
-
       z-index: 10;
     }
-    .content-1{
+
+    .content-1 {
       .wrap-header {
-        h1{
+        h1 {
           display: none;
           font-size: 24px;
           left: auto;
-
-
         }
-        img{
 
+        img {
           width: 240px;
           left: 0;
           bottom: 40px;
         }
       }
     }
-    .content-2{
-      .main-pc{
+
+    .content-2 {
+      .main-pc {
         display: none;
       }
-      .main-sp{
+
+      .main-sp {
         display: block;
       }
-      .wrap-self{
+
+      .wrap-self {
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         justify-content: space-between;
         align-items: flex-end;
-        h1{
+
+        h1 {
           position: static;
         }
-        img{
+
+        img {
           position: static;
           width: 80%;
           height: auto;
-          box-shadow: 0 2px 5px rgba(0,0,0,0.26)
+          box-shadow: 0 2px 5px rgba(0,0,0,0.26);
         }
-        .btn{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          position: static;
 
+        .btn {
+          @include dispaly-center
+          position: static;
           z-index: 10;
         }
       }
     }
-    .content-3{
-      .wrapper{
+
+    .content-3 {
+      .wrapper {
         width: 100%;
         height: 72%;
       }
-      img{
+
+      img {
         display: none;
       }
-      .wrap-works{
-        background: url(../material/polaroid.jpg);
+
+      .wrap-works {
+        background: url("../material/polaroid.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -183,44 +202,103 @@
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
-        h1,.button_wrap{
+
+        .button_wrap,
+        h1 {
           position: static;
           padding: 32px 0;
         }
-        h1{
+
+        h1 {
           text-align: left;
         }
-        .button_wrap{
+
+        .button_wrap {
           width: 70%;
           display: flex;
           flex-direction: row;
-          .btn{
+
+          .btn {
             margin: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include dispaly-center
             position: static;
           }
         }
       }
     }
-
-
   }
-  footer{
 
-    .footer-wrap{
-      .contact_icon{
-        &_imgwrap{
+  footer {
+    .footer-wrap {
+      .contact_icon {
+        &_imgwrap {
           display: none !important;
+        }
+      }
+      .wrap-contact {
+        height: 88vh;
+        width: 88vw;
+        grid-template-rows: 50% 50%;
+        grid-template-columns: 1fr;
+        .contact_section{
+          order: 2;
+        }
+        .contact_sns {
+
+          display: grid;
+          grid-template-rows: 1fr 1fr;
+          grid-template-columns: 1fr 1fr;
+          justify-content: center;
+          align-items: center;
+          height: 100%;
+          width: 100%;
+          li {
+            height: 100%;
+            width: 100%;
+            padding: 0;
+            @include dispaly-center;
+            a{
+              height: 100%;
+              width: 100%;
+              @include dispaly-center;
+            }
+            .link{
+              &-text{
+                display: none;
+              }
+              &-image{
+                display: inherit;
+                height: auto;
+                width: 30%;
+              }
+            }
+          }
+          $sns_map: (
+            twitter: $twitter,
+            instagram: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%),
+            wantedly: $wantedly
+          );
+          @each $sns_name,$sns_color in $sns_map{
+            .link_#{$sns_name}{
+              background: $sns_color;
+            }
+          }
+        }
+        .contact{
+          &_icon,&_section{
+            background: transparent;
+          }
         }
 
       }
-      .wrap-contact{
-        height: 100vh;width: 100vw;
-        grid-template-rows:50% 50%;
-        grid-template-columns: 1fr;
-      }
+    }
+    .translateX{
+      transform: translateX(-100%);
+      animation: contact_anime 800ms ease 1000ms forwards;
+    }
+    .translateX_double{
+      transform: translateX(-100%);
+      animation: contact_anime 800ms ease 800ms forwards;
     }
   }
 }
