--- a/pug/includes/_footer.pug
+++ b/pug/includes/_footer.pug
@@ -7,15 +7,15 @@
         li
           a.link_twitter(href="https://twitter.com/front_artgraph" target="_blank") 
             span.link-text  Twitter
-            img.link-image(src="material/twitter.svg")
+            img.link-image(src="material/twitter_sp.png")
         li
           a.link_instagram(href="https://www.instagram.com/frontartgraph" target="_blank")
             span.link-text  Instagram
-            img.link-image(src="material/instagram.svg")
+            img.link-image(src="material/instagram_sp.png")
         li
           a.link_wantedly(href="https://www.wantedly.com/users/42158900" target="_blank")
             span.link-text  Wantedly
-            img.link-image(src="material/wantedly_mark.svg")
+            img.link-image(src="material/wantedly_sp.png")
     .contact_icon
       ul.contact_mails
         li
