--- a/stylesheet/_responsive.scss
+++ b/stylesheet/_responsive.scss
@@ -159,18 +159,22 @@
       }
 
       .wrap-self {
+        $wrap-self-width:91%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-end;
-
+        justify-content: center;
+        align-items: center;
+        & > *{
+          margin: 16px 0 !important;
+        }
         h1 {
+          width: $wrap-self-width;
           position: static;
         }
 
         img {
           position: static;
-          width: 72%;
+          width: $wrap-self-width;
           height: auto;
           box-shadow: 0 2px 5px rgba(0,0,0,0.26);
         }
@@ -182,29 +186,25 @@
         }
       }
     }
-
     .content-3 {
       .wrapper {
         width: 100%;
         height: 72%;
       }
-
       img {
         display: none;
       }
-
       .wrap-works {
+        height: 100%;width: 100%;
         background: url("../material/polaroid.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         flex-direction: column;
-
-        .button_wrap,
-        h1 {
+        .button_wrap,h1 {
           position: static;
           padding: 32px 0;
         }
@@ -238,7 +238,7 @@
       .wrap-contact {
         height: 88vh;
         width: 72vw;
-        grid-template-rows: 50% 50%;
+        grid-template-rows: calc(88vh - 72vw) calc(88vh - 72vw);
         grid-template-columns: 1fr;
         .contact_section{
           order: 2;
@@ -253,8 +253,8 @@
         }
         .contact_sns {
           display: grid;
-          grid-template-rows: 1fr 1fr;
-          grid-template-columns: 1fr 1fr;
+          grid-template-rows: 36vw 36vw;
+          grid-template-columns: 36vw 36vw;
           justify-content: center;
           align-items: center;
           height: 100%;
@@ -265,9 +265,10 @@
             padding: 0;
             @include dispaly-center;
             a{
-              height: 100%;
-              width: 100%;
+              height: 112px;
+              width: 112px;
               @include dispaly-center;
+              opacity: 0.9;
             }
             .link{
               &-text{
@@ -280,16 +281,6 @@
               }
             }
           }
-          $sns_map: (
-            twitter: $twitter,
-            instagram: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%),
-            wantedly: $wantedly
-          );
-          @each $sns_name,$sns_color in $sns_map{
-            .link_#{$sns_name}{
-              background: $sns_color;
-            }
-          }
         }
         .contact{
           &_icon,&_section{
@@ -300,12 +291,10 @@
       }
     }
     .translateX{
-      transform: translateX(-100%);
-      animation: contact_anime 800ms ease 1000ms forwards;
+      animation: contact_anime 800ms ease 100ms forwards;
     }
     .translateX_double{
-      transform: translateX(-100%);
-      animation: contact_anime 800ms ease 800ms forwards;
+      animation: contact_anime 800ms ease 300ms forwards;
     }
   }
 }
