--- a/pug/includes/_header.pug
+++ b/pug/includes/_header.pug
@@ -1,27 +1,27 @@
 mixin menu
   ul
     li
-      a(href="#") About
+      a(href="#") ABOUT
       span
     li
-      a(href="#") Works
+      a(href="#") WORKS
       span
     li
-      a(href="#") Photos
+      a(href="#") PHOTOS
       span
     li.header_menu_twitter
-      a(href="#") Twitter
+      a(href="#") TWITTER
       span
     li.header_menu_instagram
-      a(href="#") Instagram
+      a(href="#") INSTAGRAM
       span
     li.header_menu_wantedly
-      a(href="#") Wantedly
+      a(href="#") WANTEDLY
       span
         
 .headerwrap
-  .flex-pos
-    // js add bar
+  //- .flex-pos
+  //-   // js add bar
 
   nav.header_menu.desktop
     +menu
