--- a/pug/includes/_script.pug
+++ b/pug/includes/_script.pug
@@ -1,3 +1,5 @@
+
+
 script(type="text/javascript" src="script/jquery-3.3.1.min.js")
-script(src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js")
+script(type="text/javascript" src="script/rellax.min.js")
 script(type="text/javascript" src="script/script.js")
