--- a/stylesheet/_variable.scss
+++ b/stylesheet/_variable.scss
@@ -54,43 +54,86 @@ $box_all_desktop: 1000px;
   justify-content: center;
   align-items: center;
 }
-@mixin btn-anime{
+@mixin middle{
+  top: 0;bottom: 0;
+  left: 0;right: 0;
+  margin: auto;
+}
+@mixin btn-anime($bg_color){
+
   .btn{
+    font-weight: 800;
+    width: 160px;
     font-size: 16px;
     display: inline;
     padding: 8px 24px;
-    border-radius: 8px;
+    border-radius: 32px;
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     border: solid 2px $black;
+    transition: 200ms ease 390ms;
     .text{
       position: relative;
       transition: 200ms ease 200ms;
     }
     .bg{
-      background-color: $black;
+      background-color: $bg_color;
       position: absolute;
       left: 0;
       top: 0;
-      width: 100%;
-      height: 100%;
-      transform: translateX(110%) skewX(30deg);
+      bottom: 0;
+      margin: auto;
+      width:  100%;
+      height: 110%;
+      transform: translateX(110%) skewX(40deg);
       transition: 300ms ease-in-out 200ms;
     }
     &:hover {
+      border: solid 1px $bg_color;
+
       .bg{
         transform: translateX(0%);
       }
       .text{
         color: $white;
+
       }
     }
   }
 }
+html {
+  overflow-x: hidden;
+}
+$scale: scaleX(2);
 
+div,
+span {
+  content: "";
+}
 
+img {
+  pointer-events: none;
+}
+
+a,
+h1,
+h2,
+h3,
+li,
+p {
+  color: $white;
+  color: $black;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 0.1em;
+}
+
+h1 {
+  font-size: 48px;
+}
 
 $smartphone: "only screen and (min-width : 320px) and (max-width : 480px)";
 $tablet: "only screen (min-width : 480px) and (max-width : 1024px)";
